--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -11,9 +11,12 @@
             <p><%= micropost.content %></p>
           </div>
           <div>
+            <div class="btn-group">
             <% if current_user == micropost.user %>
-              <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
+              <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm btn btn-primary' %>
             <% end %>
+              <%= render 'favorites/favorites_button', micropost: micropost %>
+            </div>
           </div>
         </div>
       </li>
