--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,11 +8,10 @@
 
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <% if logged_in? %>
-         <div class="btn-group">
-           <ul class="navar-nav">
+          <ul class="navbar-nav">
              <li class="ms-3"><%= link_to 'Users', users_path, class: 'nav-link' %></li>
              <li class="ms-3"><%= link_to 'My favorites', likes_user_path(current_user), class: 'nav-link' %></li>
-           </ul>
+          </ul>
            <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><%= current_user.name %></button>
            <ul class="dropdown-menu dropdown-menu-end">
              <li class="dropdown-item"><%= link_to 'My profile', user_path(current_user), class: 'nav-link' %></li>
